--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,9 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+      - name: Install make4ht
+        run: sudo apt-get install texlive-extra-utils
 
       # Runs a set of commands using the runners shell
       - name: Run tex to html
-        run: htlatex cv.tex
+        run: make4ht cv.tex
