--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,9 +23,12 @@ jobs:
       - uses: actions/checkout@v2
 
       # Runs a single command using the runners shell
-      - name: Install make4ht
+      - name: Install latex2html
         run: sudo apt-get install latex2html
 
       # Runs a set of commands using the runners shell
       - name: Run tex to html
         run: latex2html cv.tex
+
+      - name: Check content
+        run: ls -al
