--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,8 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       # Runs a single command using the runners shell
       - name: Install latex2html
@@ -32,3 +34,11 @@ jobs:
 
       - name: Check content
         run: ls cv -al
+      
+      - name: Commit
+        run: |
+          git add cv/*
+          git commit -m "Update CV generation"
+          
+      - name: Push
+        run: git push
