--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,23 +24,12 @@ jobs:
         with:
           fetch-depth: 0
 
-      # Runs a single command using the runners shell
-      - name: Install latex2html
-        run: sudo apt-get install latex2html
-
-      # Runs a set of commands using the runners shell
-      - name: Run tex to html
-        run: latex2html cv.tex
-
-      - name: Check content
-        run: ls cv -al
-      
-      - name: Commit
-        run: |
-          git config user.email "tenischev.semen@gmail.com"
-          git config user.name "CI bot"
-          git add cv/*
-          git commit -m "Update CV generation"
-          
-      - name: Push
-        run: git push
+      - name: Compile LateX
+        # You may pin to the exact commit or the version.
+        # uses: vinay0410/tectonic-action@b3138021657a3cdb3823f3980be054ca89e86d81
+        uses: vinay0410/tectonic-action@v1.1.2
+        with:
+          # Path of Tex File
+          tex_path: cv.tex
+          # String stating whether to push output PDF, PDF will only be pushed in case of "yes"
+          push: yes
